--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".activities.SignInActivity" />
         <activity android:name=".activities.MainMenuActivity" />
         <activity android:name=".activities.VerifyCodeActivity" />
+        <activity android:name=".activities.ProductsDetailsActivity" />
+        <activity android:name=".activities.PetsDetailsActivity" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
