--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.NewsDetailsActivity"></activity>
+        <activity android:name=".activities.AddAppointmentActivity"></activity>
+        <activity android:name=".activities.NewsDetailsActivity" />
         <activity android:name=".activities.MenuTabActivity" />
         <activity android:name=".activities.SignUpActivity" />
         <activity android:name=".activities.SignInActivity" />
