--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.AddAppointmentActivity"></activity>
+        <activity android:name=".activities.PetsAdoptedActivity"></activity>
+        <activity android:name=".activities.DoctorsListActivity" />
+        <activity android:name=".activities.AppointmentTypesActivity" />
+        <activity android:name=".activities.AddAppointmentActivity" />
         <activity android:name=".activities.NewsDetailsActivity" />
         <activity android:name=".activities.MenuTabActivity" />
         <activity android:name=".activities.SignUpActivity" />
