Implement changes in global functions class. Implement changes in profile class. Implement changes in add appointmenet class. Implement enhancements.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
 
     <application
         android:allowBackup="true"
@@ -14,7 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.PetsAdoptedActivity"></activity>
+        <activity android:name=".activities.ProfileActivity"></activity>
+        <activity android:name=".activities.PetsAdoptedActivity" />
         <activity android:name=".activities.DoctorsListActivity" />
         <activity android:name=".activities.AppointmentTypesActivity" />
         <activity android:name=".activities.AddAppointmentActivity" />
@@ -26,6 +32,7 @@
         <activity android:name=".activities.VerifyCodeActivity" />
         <activity android:name=".activities.ProductsDetailsActivity" />
         <activity android:name=".activities.PetsDetailsActivity" />
+        <activity android:name=".activities.ViewImageActivity" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,6 +40,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.projetc2application.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provide_paths" />
+        </provider>
     </application>
 
 </manifest>
